# mcp-code-understanding

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  async_clone_design.md  config.yaml  critical_fixes_implementation_summary.md  critical_issue_analysis_and_status.md  debug_tree_sitter.py  docker-compose.yml  implementation_plan.md  pyproject.toml  raw_repomap_output.txt  repo_map_output.txt  test_azure_short_url.py  test_filtering_direct.py  test_filtering_proof.py
.cache/: metadata.json
.cursor/rules/: python-formatting-rules.mdc
OLD_src/code_understanding/: config.py
OLD_src/code_understanding/analysis/: __init__.py  repo_map.py
OLD_src/code_understanding/context/: __init__.py  generator.py
OLD_src/code_understanding/indexer/: embedder.py  vector_store.py
OLD_src/code_understanding/parsers/: __init__.py  treesitter_adapter.py
OLD_src/code_understanding/repository/: __init__.py  cache.py  manager.py  path_utils.py
POC/: test_repo_map_standalone.py
REDESIGN/: extract_repo_files.py  implementation_spec.md  mcp_api_spec.md  pattern_search_test.py  redesign_overview.md  repo_map_cleanup_plan.md  test_repo_map_simple.py
deploy/aws/: deploy-simple.sh  deploy.sh  ecs-task-definition.json
design_docs/: code-understanding-mcp-server-architecture-spec.md  tree-sitter-parser-architecture.md
docs/: AI_SETUP_GUIDE.md  Code_Understanding_Scenarios.md  config-file-issue.md  python-formatting-rules.md
scripts/: extract_file_extensions.py  extract_programming_languages.py  find_docs.py  generate_certs.sh  lizard_analyzer.py  lizard_code_prioritization_logic.md  target_programming_languages_for_include.md  update_language_extensions.py
src/code_understanding/: __init__.py  __main__.py  config.py  context.py  logging_config.py  qa.py  repository.py  server.py
tests/: benchmark_providers.py  test_azure_devops.py  test_direct.py  test_integration.py  test_providers.py  test_repository_cache.py  test_treesitter.py  test_treesitter_symbols.py  test_validation.py
tests/context/: test_file_filter.py
(+46 files in other folders)
